--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   "author": "",
   "license": "ISC",
   "scripts": {
-   "test": "playwright test" 
+   "test": "playwright test",
+   "typecheck": "tsc --noEmit"
   },
   "devDependencies": {
     "@playwright/test": "^1.32.3",
